--- a/test/Makefile
+++ b/test/Makefile
@@ -1,8 +1,8 @@
 ex: link
 	./.run
 link: test matrix
-	g++ -o .run .test .matrix -std=c++17
+	g++ -o .run .test .matrix -std=c++17 -w -lglpk
 test: 
-	g++ test.cpp -c -std=c++17 -o .test
+	g++ test.cpp -c -std=c++17 -o .test -w
 matrix: ../matrix.cpp ../matrix.h 
-	g++ ../matrix.cpp -c -std=c++17 -o .matrix
+	g++ ../matrix.cpp -c -std=c++17 -o .matrix -w
